<resources>
    <string name="app_name">mPautas</string>
    <string name="profile">Perfil</string>
    <string name="email">E-mail</string>
    <string name="name">Nome</string>
    <string name="help">Ajuda?</string>
    <string name="password">Senha</string>
    <string name="back">Voltar</string>
    <string name="create_account">Cadastrar</string>
    <string name="title">Título</string>
    <string name="short_description">Breve descrição</string>
    <string name="details">Detalhes</string>
    <string name="author">Autor</string>
    <string name="login">Login</string>
    <string name="forgot_my_password">Esqueci a senha</string>
    <string name="logout">Logout</string>
    <string name="send_password">Enviar Senha</string>
    <string name="new_agenda">Nova pauta</string>
    <string name="open_agendas">Pautas Abertas</string>
    <string name="closed_agendas">Pautas fechadas</string>
    <string name="author_name">Autor</string>
    <string name="finish">Finalizar</string>
    <string name="help_user">
        AJUDA\n\n

        O mPautas é um aplicativo de gerenciamento de pautas, no qual o usuário pode efetuar um login(1) através das suas credenciais de usuário, que pode ser criadas no
na opção Cadastre-se(2), caso o usuário esqueça sua senha é possível recuperá-la acessando a opção Esqueci minha senha(3). Após fazer o login, o usuário poderá gerenciar suas pautas abertas(4) e fechadas(5). Clicando no botão flutuante no canto inferior direito, o usuário poderá criar uma nova pauta(6), que será adicionada à lista de pautas abertas. Clicando no Menu(7), o usuário poderá acessar o seu Perfil(8), no qual poderá efetuar o logout da aplicação(9).\n\n

1- Login: Ao preencher o campo de Email e Senha, o sistema fará uma validação, se o usuário existir, o login é efetuado e o usuário direcionado à sua lista de Pautas abertas.\n\n

2- Cadastro: Ao preencher os campos de Nome, Email e Senha, o sistema fará uma validação, se o usuário já existir, uma notificação é disparada, caso contrário, o sistema cria a conta do usuário.\n\n

3- Recuperar senha: Ao informar o email cadastrado, será enviado ao mesmo a senha associada ao cadastro, caso o email não seja encontrado, uma notificação é disparada.\n\n

4, 5 - Abrir Pautas Abertas/Fechadas: Uma lista contendo as pautas (abertas ou fechadas) é exibida, contendo o Titulo e uma breve descrição da mesma, ao tocar em uma pauta, a mesma é expandida, revelando sua Descrição completa e nome do autor. Ao clicar no botão (finalizar/reabrir), se a pauta estiver aberta, ela é encaminhada a lista de pautas fechadas e vice-versa.\n\n

6- Cadastras Pautas: Ao preencher todos os campos (Titulo, breve descrição, descrição), o botão Finalizar ficará disponível e a pauta será adicionada à lista de pautas abertas e o usuário encaminhada para a mesma.\n\n

7- Menu: Ao clicar no menu, o usuário terá a opção de acessar o seu perfil ou este descritivo de ajuda.\n\n

8- Perfil: Ao entrar no perfil, será exibido ao usuário seu Nome e Email de cadastro.\n\n

9- Logout: Ao fazer o logout, o usuário é encaminhado para a tela de login novamente.

</string>
</resources>
