<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.CreateNewAgendaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <EditText
        android:id="@+id/text_new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/short_description" />

    <EditText
        android:id="@+id/text_new_short_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/short_description"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/details" />

    <EditText
        android:id="@+id/text_new_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/author" />

    <TextView
        android:id="@+id/text_new_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back_create_new_agenda"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:layout_weight="2"
            android:text="@string/back"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_create_new_agenda"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/finish"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>