<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/text_recover_password_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back_recover_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:layout_weight="2"
            android:text="@string/back"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_send_password"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/send_password"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>