<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/name"
        android:textColor="@color/colorBlack"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/text_new_user_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/fields_background"
        android:hint="@string/name"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/colorBlack"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/text_new_user_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/fields_background"
        android:hint="@string/email"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/colorBlack"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/text_new_user_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/fields_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back_create_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:layout_weight="2"
            android:background="@drawable/button_grey_background"
            android:text="@string/back"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_create_new_account"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_green_background"
            android:text="@string/create_account"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>