<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.ProfileAcessActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/name"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="@color/colorBlack"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back_profile_acess"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_grey_background"
            android:text="@string/back"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_logout"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_red_background"
            android:text="@string/logout"
            android:textColor="@color/colorTextWhite"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>